feat: robust process management, schema sync, npm publish prep
- Add workers config (single worker for low-memory machines)
- Kill stale port holders before starting server
- Reset crash counter on config change and after healthy uptime (30s+)
- Detect SIGKILL/OOM with actionable error messages
- Pre-flight memory check with model size estimates
- Capture stderr for crash diagnostics
- Schema sync: config.ts derives defaults from openclaw.plugin.json
- Build-time check-schema script catches TS↔JSON drift
- npm publish prep: LICENSE, README, package.json files/scripts
- 600s upstream timeout in proxy

--- a/package.json
+++ b/package.json
@@ -3,16 +3,28 @@
   "version": "0.1.0",
   "description": "OpenClaw local TTS plugin powered by mlx-audio — zero API key, zero cloud dependency",
   "type": "module",
-  "main": "index.ts",
+  "main": "./dist/index.js",
+  "scripts": {
+    "check-schema": "node scripts/check-schema-sync.mjs",
+    "build": "tsc && npm run check-schema",
+    "prepublishOnly": "npm run build"
+  },
+  "files": [
+    "dist/**",
+    "openclaw.plugin.json",
+    "skills/**",
+    "README.md",
+    "LICENSE"
+  ],
   "openclaw": {
-    "extensions": ["./index.ts"]
+    "extensions": ["./dist/index.js"]
   },
   "author": "CCC Games <dev@contextcross.com>",
   "license": "MIT",
   "keywords": ["openclaw", "tts", "mlx", "apple-silicon", "local"],
   "repository": {
     "type": "git",
-    "url": "https://github.com/cosformula/mlx-audio.git"
+    "url": "https://github.com/cosformula/openclaw-mlx-audio.git"
   },
   "devDependencies": {
     "@types/node": "^22.10.2",
