--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "OpenClaw local TTS plugin powered by mlx-audio — zero API key, zero cloud dependency",
   "type": "module",
   "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "scripts": {
     "check-schema": "node scripts/check-schema-sync.mjs",
     "build": "tsc && npm run check-schema",
