--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,5 +10,5 @@
     "rootDir": ".",
     "declaration": true
   },
-  "include": ["index.ts", "src/**/*.ts"]
+  "include": ["index.ts", "src/**/*.ts", "test/**/*.ts"]
 }
