--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,5 +24,8 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Run tests
+      - name: Run tests (unit + integration)
         run: npm test
+
+      - name: Run e2e smoke
+        run: node --test dist/test/e2e.test.js
