--- a/python-runtime/pyproject.toml
+++ b/python-runtime/pyproject.toml
@@ -9,9 +9,9 @@ dependencies = [
   "python-multipart",
   "setuptools<81",
   "webrtcvad",
-  "misaki",
+  "misaki[en]",
   "num2words",
-  "phonemizer",
+  "phonemizer-fork",
   "spacy>=3.8,<3.9",
   "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
 ]
