fix: add all misaki language extras for Kokoro TTS
misaki[en] only installed English G2P frontend. Kokoro supports
en/zh/ja/ko/vi/he, so install misaki[en,zh,ja,ko,vi,he] to cover
all Kokoro-supported languages. Also updates the external Python
install hint in index.ts.

--- a/python-runtime/pyproject.toml
+++ b/python-runtime/pyproject.toml
@@ -9,7 +9,7 @@ dependencies = [
   "python-multipart",
   "setuptools<81",
   "webrtcvad",
-  "misaki[en]",
+  "misaki[en,zh,ja,ko,vi,he]",
   "num2words",
   "phonemizer-fork",
   "spacy>=3.8,<3.9",
