fix: sync openclaw.plugin.json version, add auto-sync script
Added scripts/sync-manifest-version.mjs and npm version hook to
keep openclaw.plugin.json version in sync with package.json
automatically on npm version bumps.

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "check-schema": "node scripts/check-schema-sync.mjs",
     "build": "tsc && npm run check-schema",
     "test": "npm run build && node --test dist/test/*.test.js",
+    "version": "node scripts/sync-manifest-version.mjs && git add openclaw.plugin.json",
     "prepublishOnly": "npm run build"
   },
   "files": [
